Database configuration, implementation Doctrine Infrastructure for Domain, Doctrine Migration with six default initial products, Fixtures for Integration tests

--- a/app/.env
+++ b/app/.env
@@ -17,3 +17,7 @@
 APP_ENV=dev
 APP_SECRET=16eabf3cbe26cd13eae0ca18b911c63f
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="mysql://root:WmY5mWF4WG@mysql:3306/audioteka"
+###< doctrine/doctrine-bundle ###
