--- a/app/.env
+++ b/app/.env
@@ -21,3 +21,10 @@ APP_SECRET=16eabf3cbe26cd13eae0ca18b911c63f
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL="mysql://root:WmY5mWF4WG@mysql:3306/audioteka"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
