--- a/app/.env.test
+++ b/app/.env.test
@@ -5,4 +5,5 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
+# _test suffix to database name is added in doctrine.yaml
 DATABASE_URL="mysql://root:WmY5mWF4WG@mysql:3306/audioteka"
