--- a/app/config/packages/messenger.yaml
+++ b/app/config/packages/messenger.yaml
@@ -1,17 +1,21 @@
 framework:
     messenger:
-        # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        # failure_transport: failed
+        default_bus: event.bus
+
+        buses:
+            command.bus:
+                middleware:
+                    - doctrine_transaction # every command handling will be in automatic doctrine transaction
+            query.bus: ~
+            event.bus: ~
 
         transports:
+            sync: 'sync://'
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
+            #async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
 
         routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
 
 # when@test:
 #    framework:
