Whole implementation of Application/CQRS for Product and Cart, Controllers and endpoints for Product and Cart, Functional Tests

--- a/app/config/packages/messenger.yaml
+++ b/app/config/packages/messenger.yaml
@@ -5,6 +5,7 @@ framework:
         buses:
             command.bus:
                 middleware:
+                    - validation # validate command before handling it
                     - doctrine_transaction # every command handling will be in automatic doctrine transaction
             query.bus: ~
             event.bus: ~
